--- a/oldtab.html
+++ b/oldtab.html
@@ -9,7 +9,14 @@
 
 	<div style="float:right;">
 	    <input type="checkbox" id="toggleHost">show host</input>
-	    <input type="checkbox" id="reverseOrder">reverse order</input>	    
+	    <input type="checkbox" id="reverseOrder">reverse order</input>
+	    Order by <select  id="sortBy">
+		<option value="lastAccessed">last accessed</option>
+		<option value="url">host</option>
+		<option value="windowId">window</option>
+		<option value="title">title</option>		
+		</select>
+	    </input>	    	    
 	</div>
 	
 	<p>
