hide the host column

--- a/oldtab.html
+++ b/oldtab.html
@@ -8,7 +8,7 @@
 	<h2>Old Tabs</h2>
 
 	<div style="float:right;">
-	    <input type="checkbox" id="toggleHost">show host</input>
+	    <input type="checkbox" id="toggleHost" checked="1">show host</input>
 	    <input type="checkbox" id="reverseOrder">reverse order</input>
 	    Order by <select  id="sortBy">
 		<option value="lastAccessed">last accessed</option>
