alternate colors for rows when ordering by window so group tabs in same window.   Remove the empty new tab when group selected tabs

--- a/oldtab.html
+++ b/oldtab.html
@@ -37,8 +37,8 @@
 </div>
 
 	
-	<table id="OldTabsTable" border=1>
-	    <tr><th>Selected</th><th>Tab Title</th><th>Number of days <br/>since last access</th><th>Last accessed</th>
+	<table id="OldTabsTable" border=0>
+	    <tr><th>Selected</th><th>Tab Title</th><th>days since <br/>last access</th><th>Last accessed</th>
 	        <th>Host</th></tr>
 	</table>
 
