added a 'group by domain' button that groups by domain, and puts all those tabs with a domain for which there are fewer than three tabs all together in a single window.

--- a/oldtab.html
+++ b/oldtab.html
@@ -33,7 +33,8 @@
 <div style="margin: auto;">	
     <button id="refresh">Refresh</button>
     <button id="delete">Delete Selected</button>
-    <button id="group">Group Selected</button>    
+    <button id="group">Group Selected</button>
+    <button id="btn.groupByDomain">Group all by domain</button>        
 </div>
 
 	
@@ -42,6 +43,11 @@
 	        <th>Host</th></tr>
 	</table>
 
+
+	<!-- place for showing content for debugging. -->
+	<div id="temp"></div>
+	
+	<script src="functions.js"></script> 
 	<script src="oldtab.js"></script> 
     </body>	
 </html>
